@@ -3,6 +3,7 @@
 
 - Python callbacks can now be used with class member functions.
 - Memory tracking is no longer compiled in the client library.
+- Add --help option to mosquitto to display usage.
 
 0.11.2 - 20110626
 =================
